<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/button_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_activity"/>
    <Button
        android:id="@+id/button_basicControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_basicControls"/>

    <Button
        android:id="@+id/button_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name_listview"/>
    <Button
        android:id="@+id/button_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name_fragment"/>
    <Button
        android:id="@+id/button_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name_ViewPager"/>
    <Button
        android:id="@+id/button_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="intent传值演示"/>
    <Button
        android:id="@+id/button_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="service演示"/>
    <Button
        android:id="@+id/button_broadCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="broadCast演示"/>
</LinearLayout>